tests/negative/gold/interface2_test.gold
tests/negative/interface2_test.toit:7:5: warning: Unusual indentation for parameter
    log "foo"
    ^~~
tests/negative/interface2_test.toit:7:9: error: Unexpected token: <string>
    log "foo"
        ^~~~~
tests/negative/interface2_test.toit:9:3: error: Interface members can't have bodies
  foo:
  ^~~
tests/negative/interface2_test.toit:13:8: error: Can't instantiate interface 'A'
  a := A
       ^
Compilation failed.
